# ParserCombinatorBench

./: .gitignore  Makefile  ParserCombinatorBench.cabal  ParsingBench.cabal  README.md  bench.sh  prof-whnf.sh
data/css/: 1.css  2.css  2_nc.css  3.css  bench.css
data/csv/: 4.csv  bench.csv
data/expr/: 10.expr  11.expr  2.expr  4.expr  6.expr  7.expr  9.expr  test.expr
data/http/: 1.http  2.http  3.http  5.http  6.http  bench.http  test.http
data/json/: 3.json  4.json  6.json  bench.json
data/url/: 1.url  3.url  4.url  bench.url  test.url
presentation/: presentation.tex
results/70/space/nf/gc/: css-ap-nf.gc  css-p2-nf.gc  css-p3-nf.gc  css-pp-nf.gc  css-u1-nf.gc  css-u2-nf.gc  csv-ap-nf.gc  csv-p2-nf.gc  csv-p3-nf.gc  csv-pp-nf.gc  csv-u1-nf.gc  csv-u2-nf.gc  expr-ap-nf.gc  expr-p2-nf.gc  expr-p3-nf.gc  expr-pp-nf.gc  expr-u1-nf.gc  expr-u2-nf.gc  http-ap-nf.gc  http-p2-nf.gc  http-p3-nf.gc  http-pp-nf.gc  http-u1-nf.gc  http-u2-nf.gc  json-ap-nf.gc  json-p2-nf.gc  json-p3-nf.gc  json-pp-nf.gc  json-u1-nf.gc  json-u2-nf.gc  url-ap-nf.gc  url-p2-nf.gc  url-p3-nf.gc  url-pp-nf.gc  url-u1-nf.gc  url-u2-nf.gc
results/70/space/nf/gc-uu2-online/: css-u2-nf.gc  csv-u2-nf.gc  expr-u2-nf.gc  http-u2-nf.gc  json-u2-nf.gc  url-u2-nf.gc
results/70/space/nf/gc-uu2-text/: css-u2-nf.gc  csv-u2-nf.gc  expr-u2-nf.gc  http-u2-nf.gc  json-u2-nf.gc  url-u2-nf.gc
results/70/space/nf/hp/: css-ap-nf.hp  css-p2-nf.hp  css-p3-nf.hp  css-pp-nf.hp  css-u1-nf.hp  css-u2-nf.hp  csv-ap-nf.hp  csv-p2-nf.hp  csv-p3-nf.hp  csv-pp-nf.hp  csv-u1-nf.hp  csv-u2-nf.hp  expr-ap-nf.hp  expr-p2-nf.hp  expr-p3-nf.hp  expr-pp-nf.hp  expr-u1-nf.hp  expr-u2-nf.hp  http-ap-nf.hp  http-p2-nf.hp  http-p3-nf.hp  http-pp-nf.hp  http-u1-nf.hp  http-u2-nf.hp  json-ap-nf.hp  json-p2-nf.hp  json-p3-nf.hp  json-pp-nf.hp  json-u1-nf.hp  json-u2-nf.hp  url-ap-nf.hp  url-p2-nf.hp  url-p3-nf.hp  url-pp-nf.hp  url-u1-nf.hp  url-u2-nf.hp
results/70/space/nf/prof/: css-ap-nf.prof  css-p2-nf.prof  css-p3-nf.prof  css-pp-nf.prof  css-u1-nf.prof  css-u2-nf.prof  csv-ap-nf.prof  csv-p2-nf.prof  csv-p3-nf.prof  csv-pp-nf.prof  csv-u1-nf.prof  csv-u2-nf.prof  expr-ap-nf.prof  expr-p2-nf.prof  expr-p3-nf.prof  expr-pp-nf.prof  expr-u1-nf.prof  expr-u2-nf.prof  http-ap-nf.prof  http-p2-nf.prof  http-p3-nf.prof  http-pp-nf.prof  http-u1-nf.prof  http-u2-nf.prof  json-ap-nf.prof  json-p2-nf.prof  json-p3-nf.prof  json-pp-nf.prof  json-u1-nf.prof  json-u2-nf.prof  url-ap-nf.prof  url-p2-nf.prof  url-p3-nf.prof  url-pp-nf.prof  url-u1-nf.prof  url-u2-nf.prof
results/70/space/nf/prof-uu2-online/: css-u2-nf.prof  csv-u2-nf.prof  expr-u2-nf.prof  http-u2-nf.prof  json-u2-nf.prof  url-u2-nf.prof
results/70/space/nf/prof-uu2-text/: css-u2-nf.prof  csv-u2-nf.prof  expr-u2-nf.prof  http-u2-nf.prof  json-u2-nf.prof  url-u2-nf.prof
results/70/space/whnf/gc/: css-ap-whnf.gc  css-p2-whnf.gc  css-p3-whnf.gc  css-pp-whnf.gc  css-u1-whnf.gc  css-u2-whnf.gc  csv-ap-whnf.gc  csv-p2-whnf.gc  csv-p3-whnf.gc  csv-pp-whnf.gc  csv-u1-whnf.gc  csv-u2-whnf.gc  expr-ap-whnf.gc  expr-p2-whnf.gc  expr-p3-whnf.gc  expr-pp-whnf.gc  expr-u1-whnf.gc  expr-u2-whnf.gc  http-ap-whnf.gc  http-p2-whnf.gc  http-p3-whnf.gc  http-pp-whnf.gc  http-u1-whnf.gc  http-u2-whnf.gc  json-ap-whnf.gc  json-p2-whnf.gc  json-p3-whnf.gc  json-pp-whnf.gc  json-u1-whnf.gc  json-u2-whnf.gc  url-ap-whnf.gc  url-p2-whnf.gc  url-p3-whnf.gc  url-pp-whnf.gc  url-u1-whnf.gc  url-u2-whnf.gc
results/70/space/whnf/hp/: css-ap-whnf.hp  css-p2-whnf.hp  css-p3-whnf.hp  css-pp-whnf.hp  css-u1-whnf.hp  css-u2-whnf.hp  csv-ap-whnf.hp  csv-p2-whnf.hp  csv-p3-whnf.hp  csv-pp-whnf.hp  csv-u1-whnf.hp  csv-u2-whnf.hp  expr-ap-whnf.hp  expr-p2-whnf.hp  expr-p3-whnf.hp  expr-pp-whnf.hp  expr-u1-whnf.hp  expr-u2-whnf.hp  http-ap-whnf.hp  http-p2-whnf.hp  http-p3-whnf.hp  http-pp-whnf.hp  http-u1-whnf.hp  http-u2-whnf.hp  json-ap-whnf.hp  json-p2-whnf.hp  json-p3-whnf.hp  json-pp-whnf.hp  json-u1-whnf.hp  json-u2-whnf.hp  url-ap-whnf.hp  url-p2-whnf.hp  url-p3-whnf.hp  url-pp-whnf.hp  url-u1-whnf.hp  url-u2-whnf.hp
results/70/space/whnf/prof/: css-ap-whnf.prof  css-p2-whnf.prof  css-p3-whnf.prof  css-pp-whnf.prof  css-u1-whnf.prof  css-u2-whnf.prof  csv-ap-whnf.prof  csv-p2-whnf.prof  csv-p3-whnf.prof  csv-pp-whnf.prof  csv-u1-whnf.prof  csv-u2-whnf.prof  expr-ap-whnf.prof  expr-p2-whnf.prof  expr-p3-whnf.prof  expr-pp-whnf.prof  expr-u1-whnf.prof  expr-u2-whnf.prof  http-ap-whnf.prof  http-p2-whnf.prof  http-p3-whnf.prof  http-pp-whnf.prof  http-u1-whnf.prof  http-u2-whnf.prof  json-ap-whnf.prof  json-p2-whnf.prof  json-p3-whnf.prof  json-pp-whnf.prof  json-u1-whnf.prof  json-u2-whnf.prof  url-ap-whnf.prof  url-p2-whnf.prof  url-p3-whnf.prof  url-pp-whnf.prof  url-u1-whnf.prof  url-u2-whnf.prof
results/70/time/nf/: bench-nf.csv  bench-nf.html
results/70/time/uu2-online-nf/: bench-nf-uu2-online-results.csv  bench-nf-uu2-online-results.html
results/70/time/whnf/: bench-whnf.csv  bench-whnf.html
results/74/space/nf/gc/: css-ap.gc  css-p2.gc  css-p3.gc  css-pp.gc  css-u1.gc  css-u2.gc  csv-ap.gc  csv-p2.gc  (+28 more)
results/74/time/nf/: bench-nf.csv  bench-nf.html
results/74/time/whnf/: bench-whnf.csv  bench-whnf.html
results/s-70-r1/: bench.csv  bench.html
results/s-74-r1/: bench.csv  bench.html
scripts/: bench.sh  gc-nf.sh  gc-whnf.sh  hp-nf.sh  hp-whnf.sh  prof-nf.sh
src/Parsing/Bench/: Bench.hs  BenchNF.hs  BenchWHNF.hs  Main.hs  Parsers.h  Test.h  Test.hs
src/Parsing/Bench/AST/: Expr.hs  HTTP.hs  JSON.hs
src/Parsing/Bench/Attoparsec/: Base.hs  CSS.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
src/Parsing/Bench/Parsec2/: Base.hs  CSS.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
src/Parsing/Bench/Parsec3/: Base.hs  CSS.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
src/Parsing/Bench/Polyparse/: Base.hs  CSS.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
src/Parsing/Bench/UU1/: Base.hs  CSS.hs  CSS2.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
src/Parsing/Bench/UU2/: Base.hs  CSS.hs  CSV.hs  Else.hs  Expr.hs  HTTP.hs  JSON.hs  URL.hs
(+252 files in other folders)
