name:                  ParsingBench
version:               0.0.0.1
synopsis:              Benchmarking Haskell Parsing Libraries
description:           Benchmarking Haskell Parsing Libraries
author:                Nikolaos Bezirgiannis <n.bezirgiannis@students.uu.nl>
maintainer:            NikolaosBezirgiannis <n.bezirgiannis@students.uu.nl>
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.9.2
--extra-source-files:    doc/*.md, doc/*.tex, doc/*.pdf

executable bench
    build-depends: base, text, transformers, uulib, uu-parsinglib, parsec2, parsec3, attoparsec, polyparse, QuickCheck, criterion
    main-is:    Parsing/Bench/Bench.hs
    hs-source-dirs: src


executable test
    build-depends: base, text, transformers,uulib, uu-parsinglib, parsec2, parsec3, attoparsec, polyparse, QuickCheck, HUnit, syb
    main-is:    Parsing/Bench/Test.hs
    hs-source-dirs: src

